This is just to motivate myself to improve a little bit every day :)

Current Streak: 4
Best: 4

27-03-2024
Learned:
Did:
    -Messed about with trying to set up an example component that adheres to MVVM pattern, but
        couldn't get the ViewModel class to work - something about kotlin.AutoCloseable not being
        accessible.
    -Upgrade kotlin (and its stdlib) from 1.9.22 -> 1.9.23 to fix missing AutoCloseable

26-03-2024
Learned:
Did:
    -Disable precompose as it stops iOS from building
    -Start Koin on both iOS and Android (can't be done from shared code)
    -Remove special character unsupported by custom font
    -Fix sloppy precompose dependency implementations, re-enable precompose
    -Wrap the shared app component with PreComposeApp, instead of the individual Android and iOS
        apps as is done in some tutorials. I think this should work... we'll find out if it doesn't

25-03-2024
Learned:
    -Read a little about dependency injection.
Did:
    -Update compose version, add koin and precompose to project.

24-03-2024
Learned:
    -Read about MVVM pattern. Goal is to separate Interface and Business Logic.
        Good pattern to keep in mind, but app is not large enough to implement it yet.
Did:
    -Preliminary split (in name only) of data and presentation layers.
    -Add string localisation (using Compose Multiplatform out of the box solution).