@@ -1,6 +1,8 @@
 package data.calendar
 
+import kotlinx.datetime.DayOfWeek
+
 data class CalendarUIState (
     val isLoading: Boolean = true,
-    val today: String = ""
+    val today: DayOfWeek = DayOfWeek.MONDAY
 )
